# CSC_211h_CMC

./: CMakeLists.txt  README.md  basepage.cpp  basepage.h  counselingdialog.cpp  counselingdialog.h  custombutton.cpp  custombutton.h  homepage.cpp  homepage.h  journalviewer.cpp  journalviewer.h  loginpage.cpp  loginpage.h  main.cpp  mainwindow.cpp  mainwindow.h  moodinfodialog.cpp  moodinfodialog.h  moodwidget.cpp  moodwidget.h  resources.qrc  schedulepage.cpp  schedulepage.h  taskpage.cpp  taskpage.h
